# wikidl

./: README.md  pyproject.toml
docs/: README.md  SUMMARY.md  installation.md
docs/wikidl-cli/: quick-start.md  slurm-scheduler.md
docs/wikidl-python/: api-reference.md  quick-start.md
tests/: test_downloader.py
wikidl/: __init__.py  core.py  patterns.py  utils.py
