[tool.poetry]
name = "wikidl"
version = "0.1.1"
description = "WikiDL is a helpful command-line tool to download Wikipedia dumps."
authors = ["Lingxi Li <lilingxi01@gmail.com>"]
readme = "README.md"
packages = [
    { include = "wikidl" },
]
homepage = "https://wikidl.lingxi.li/"
repository = "https://github.com/lilingxi01/wikidl"

[tool.poetry.dependencies]
python = ">=3.8,<4"
psutil = "^5.9.5"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
